--- a/package.json
+++ b/package.json
@@ -43,7 +43,9 @@
     "@types/object-hash": "^1.3.1",
     "@types/semver": "^7.1.0",
     "@types/underscore": "^1.9.4",
-    "tslint": "latest"
+    "prettier": "latest",
+    "tslint": "latest",
+    "tslint-config-prettier": "latest"
   },
   "scripts": {
     "postinstall": "node script/postinstall.js"
@@ -105,5 +107,10 @@
   "package-deps": [
     "ink",
     "language-julia"
-  ]
+  ],
+  "prettier": {
+    "semi": false,
+    "tabWidth": 2,
+    "printWidth": 120
+  }
 }
