--- a/package.json
+++ b/package.json
@@ -25,18 +25,20 @@
     "atom": ">=1.39.0 <2.0.0"
   },
   "dependencies": {
-    "atom-package-deps": "*",
+    "atom-package-deps": "latest",
     "atom-space-pen-views": "^2.0.0",
     "etch": "^0.14",
     "fuzzaldrin-plus": "^0.6.0",
     "node-pty-prebuilt-multiarch": "0.9.0",
     "object-hash": "^2.0.3",
-    "physical-cpu-count": "*",
+    "physical-cpu-count": "latest",
     "semver": "^6.3.0",
     "ssh2": "^0.8.4",
-    "underscore-plus": "*"
+    "underscore-plus": "latest"
   },
   "devDependencies": {
+    "typescript": "^3.8.3",
+    "coffeescript": "^2.5.1",
     "@types/atom": "^1.40.1",
     "@types/fuzzaldrin-plus": "^0.6.0",
     "@types/object-hash": "^1.3.1",
@@ -47,7 +49,6 @@
     "@typescript-eslint/eslint-plugin": "latest",
     "@typescript-eslint/parser": "latest",
     "babel-eslint": "latest",
-    "coffeescript": "latest",
     "eslint-plugin-coffee": "latest",
     "eslint-plugin-json": "latest",
     "eslint-plugin-only-warn": "latest",
