--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,13 +34,14 @@ jobs:
       - name: Install APM dependencies
         run: |
           apm ci  # uses locked module. use `apm install` for non-locked
-          apm install ink language-julia
           node script/postinstall.js
       - name: Julia CI
         run: julia -e 'include("ci/packages.jl")'
         shell: bash
-#      - name: Run tests 👩🏾‍💻
-#        run: atom --test spec
+      - name: Run tests 👩🏾‍💻
+        run: |
+          apm install ink language-julia
+          atom --test spec
 
   Lint:
     if: "!contains(github.event.head_commit.message, '[skip ci]')"
