--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,8 +39,8 @@ jobs:
       - name: Julia CI
         run: julia -e 'include("ci/packages.jl")'
         shell: bash
-#      - name: Run tests 👩🏾‍💻
-#        run: atom --test spec
+      - name: Run tests 👩🏾‍💻
+        run: atom --test spec
 
   Lint:
     if: "!contains(github.event.head_commit.message, '[skip ci]')"
