--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "julia-client",
-  "main": "./lib/julia-client",
+  "main": "./dist/julia-client",
   "version": "0.12.5",
   "description": "The core package of Juno, the Julia IDE",
   "keywords": [
@@ -36,8 +36,25 @@
     "ssh2": "^0.8.4",
     "underscore-plus": "*"
   },
+  "devDependencies": {
+    "coffeescript": "^1.12.7",
+    "@babel/core": "^7.10.2",
+    "@babel/cli": "^7.10.1",
+    "@babel/plugin-transform-modules-commonjs": "^7.10.1",
+    "@babel/preset-env": "^7.10.2",
+    "@babel/preset-react": "^7.10.1",
+    "@babel/plugin-proposal-optional-chaining": "^7.10.1",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/plugin-proposal-class-properties": "^7.10.1",
+    "babel-plugin-transform-export-extensions": "^6.22.0",
+    "shx": "^0.3.2"
+  },
   "scripts": {
-    "postinstall": "node script/postinstall.js"
+    "postinstall": "node script/postinstall.js",
+    "clean": "shx rm -rf dist && shx mkdir dist",
+    "coffee": "coffee -c -M -o dist dist && shx rm -rf dist/*.coffee dist/**/*.coffee dist/**/**/*.coffee",
+    "babel": "babel dist --out-dir dist",
+    "build": "shx cp -r lib/* dist && npm run coffee && npm run babel"
   },
   "consumedServices": {
     "status-bar": {
